# pandas-chatbot-generic

./: LICENSE  README.md  pyproject.toml  streamlit_app.py
data/: sample_data.csv  sample_schema.json
pandas_chatbot_generic/: agent.py  tools.py  utils.py
